<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout15"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo2_without_letters"
    android:backgroundTint="@color/colorLayoutBackgrounds"
    android:backgroundTintMode="add"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_createTrainer_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_texts"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorRed"
                android:textColorLink="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_createTrainerImage" />

            <EditText
                android:id="@+id/et_createTrainer_lastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_texts"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorRed"
                android:textColorLink="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_createTrainer_name" />

            <ImageView
                android:id="@+id/imageView_createTrainerImage"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <EditText
                android:id="@+id/et_createTrainer_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_texts"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorRed"
                android:textColorLink="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_createTrainer_lastName" />

            <EditText
                android:id="@+id/et_createTrainer_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_texts"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="number|textPersonName"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorRed"
                android:textColorLink="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_createTrainer_email" />

            <EditText
                android:id="@+id/et_createTrainer_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_edit_texts"
                android:ems="10"
                android:hint="@string/notes"
                android:inputType="textPersonName"
                android:textColor="@color/colorRed"
                android:textColorHint="@color/colorRed"
                android:textColorLink="@color/colorRed"
                android:textCursorDrawable="@color/colorRed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_createTrainer_mobile" />

            <Button
                android:id="@+id/button_saveTrainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_style"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="@+id/et_createTrainer_notes"
                app:layout_constraintStart_toEndOf="@+id/trainer_btn_back"
                app:layout_constraintTop_toBottomOf="@+id/et_createTrainer_notes" />

            <Button
                android:id="@+id/trainer_btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_saveTrainer"
                app:layout_constraintStart_toStartOf="@+id/et_createTrainer_notes"
                app:layout_constraintTop_toTopOf="@+id/button_saveTrainer" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>